@@ -1,25 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST tclperl-3.2.tar.bz2 11765 SHA256 3643915a2f3d51da4d6296d0b57d796163ba0358f65bc97da6c0ef5cccb26173 SHA512 aed6fb4b0275cf75e6024336e81e3cd1502d82ae697e79b6142d2f9b3cfb0891541cc585fa83d6219632f11d6eda43b141d009caf5fe7433b2b2ca92aa875c00 WHIRLPOOL a64d8b043f208cd4a76424920c3510baed0ceecb9b5308463e6d6739df4d89cb7b4bde13b69db0c65e9da653a41fa64ca78986eeabf9631720e18e8fd6571862
 EBUILD tclperl-3.2-r1.ebuild 1026 SHA256 dab7f3520fa668795226684893e1f3c9eaad57ae34637faa9245010d4875bbce SHA512 685475dfc69c41690ef757f6bc9936a7dc041443fcdbd35790eb4e7c26303a4fa56975f7a97bef9f238dba0ca2b19dbc3e935cab8bd979eb932bfb4d8e557c19 WHIRLPOOL 6265f69bd4af05a876a3756e1dc7dd504a46ab36350e10bf5b666c8e27af84bf9402ac6a6e730b2c512130d1ae3437186b763f75494d03a9d58cd8329c4946bc
-EBUILD tclperl-3.2.ebuild 1027 SHA256 16c02b18a33b86c97d557b2f07097b2faba6377d168a3694e61968011e33d533 SHA512 91ef922177d9180604c177d17794c16284a9257d3c8e8f628979ce4bb68cd901c0aaff435e3bc784af0b89ab5fa27d50fe2043309dd22d954d5ec2abaa7e4622 WHIRLPOOL 2ec96065bd9914569cca689c8024b1defdeaa42e2db015e167fae70a91a1fb3c4f0a1042315f334e0397befa55161721026aaaf70a24bfb0f9a3c891609c2de6
-MISC ChangeLog 1601 SHA256 0774c9e79d6ae063ce12bdd7a2d2a09743be2375cf3cb491a595921af98602f5 SHA512 a312f195188fba85ecd5fb19d8d4a56b17c27819b69b5de138bcefb6f68ac7425b40faf1045426c841e5f802556357a359bb3e2958600889a517f7ae7fab90b8 WHIRLPOOL 013dd4a2066fc55b98f3630ac82aa8ee47554292ff98ed0b28d90099cd4f4f2b891d49d6fccecb17abdab2cdede83f9028cfee0781c50545c3b0da9fd44674ed
-MISC metadata.xml 158 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290 SHA512 60ffb8f937083ebfa2a70b1a3ac90bd9ca29cae6194ab77341a78c17d44123cedf5bf740611910e9a2f65585d0973e489bb6062471d26d0a5107e1e8b7f267ae WHIRLPOOL ef7a6760bc24a47df7eb857c63984981cf6b92fc52ce6cb4f71d937308dbbb94590841c5870bf0d6d550084f8dbe59707be14e61e3482267c5268c8f7d3a1080
+MISC ChangeLog 1698 SHA256 79cf6755f69428acafaf1b34a850d1cca3b2941722c8e788a80bae992b652618 SHA512 9e50cf3ac81c04de5ef2c662a51822efdfd860696e1d7ab04cc874721647c0c082f6b66385a04e58aa128c84cfb8c1e778bda640da4fbbfc77b25f0b2b3a701d WHIRLPOOL c57ca7563c1a9905f4349a671f194822033aeb5cafbd131ee88365748ab8b3bf955784087c727cea5bb77282bd52abb685dd86c2760b5da7d32ef67229a379e9
+MISC metadata.xml 160 SHA256 225a6f78d287329cdf2f4ed57468be28bd6565fd9a62207c2cc48e25ac9d3537 SHA512 a50627bda9ed953daf422b5a2e89b5b64e296d1a023d767c8a4ebb2cd51cd0036cecce455762a54e7d669f94d17d9de21052bac94fc08b1365ef42eb2f267742 WHIRLPOOL 61fa22d50aaf2bdecc467e26c9675cf7949ad55a4a8821730c91d1bd73f83fc4c35660851961310efa450e337a7ef572a925e186b8b05984d6315efc509fd365
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVEsHSAAoJELp701BxlEWfQZcP/1pJiq+6xQ4jZ9rDCOjoPpIs
-uY/xZGIWExmzhkFmNOZLVgFQb0/R3yG4gAiLGM+w16rmhtPK3NEScwdy/l8LFAqA
-ipMkYjLWkNk7pn6cfb9q4Ime66o2B1KaR55l7gDyRLtGB30BYSwdnbLrvAFZYWLm
-/Nw43m8L0ke+JOghg8uUXYZAuEZMFAw9JgK+Qm1cXjki4opMAMvOOS9yCUVec2/a
-YIUKooHHrYxbAAeoAFKfPy4DfsgJtiTQjb3/NR2fLrnaWOAgVD9SvMvjhUFROfWZ
-dzeN2spWsETompA/gyhAiEpxTT0+VOGmN5Y71vKI6pEnbha6aka+o72g1qVGdRZA
-Ix29P2WWEU7cLw1lQ/HTLCLk9YIgBBtMYLW9FtM3s31F8gu/OvWCW9IUByleYMQc
-N1k+55FdSrzY6YP2hSEMBSVPI0eMsxsSvaaJZOMdSsVygilupyIK7fTv9Ln6gKks
-cMDz125ozQC6sIoEwYjbyLysI74XtSNbs7+P24tNkpU/8kyegWl8rh0XGmBuNr3S
-a7cEQp3j33167IgzV/oH1trMtgKuCbiZoUFl0dF8kZtO8xCe0wiXUsKZHVfbQqLz
-UFPJ9VsZ/TpNY12mGW5L76DS8zFBksvOjArcgNfbfS7BXU/maGVwzBwpfPnOH40E
-C+ykOQrGTvowZToqh7Qv
-=NcET
+iQJ8BAEBCgBmBQJVEtqwXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirLQ8P/jZQUE3h5qBlgOkQM5Tn0OYX
+ZXcNbdkWei7kqNRIc/FrphcTTl6Uo1AqiejBTM7znR0kQ5O+eO4jjvmqvfABD6El
+XrfHi6+pplBFNIn+u41FAdzSemc0fwmafogiMEVUubd5xWNMqjTkr8PQdzXWqJwC
+De7wiXbBFSYmhyFagApIdriRz/xcrld9rLBmMX6qSzMOEzf/xfgTO/nSvRwM1ln0
+HrYhkavptjCvlmJJXEJVpd/Zm6Lx7PDKohIl/8uyq83dP8ZDY6SDt1h1Gl8olCJc
+GddJw9efKUyKpoZqaj23NbA/8PgqBDoE94i1iEgDh8nm+NnSwqjGhz49pcnNnlw3
+NF4uZXNn1Z0xONv5AY9M7kKdgb+uo6GeyhxUnnNMNdEPq93FnUVJ1fq4gS9Va0RH
+uhNWdMU2oT0ooyA7JotX9ZtiKSDVcpm+p2TAxIDF8jBl0yl8VEUGBSFf+OVDPB9H
+CDW44nJkAVO3oYn9LERnAPXboSBeeuRfw17Pfb3ZWEogwXpWF1k92LrVMiE2aFe5
+hQSTyGQwvMnAWUmlhMT+jQERPaDne2tWgZnwIEZBnXheW4quHTJFOR0Gkd2FMu/Y
+xDkL7az5+0eptX7REQNS5XOQenxG9wo3EW7498/yCR1WDY2pdi/XLffz/9rnAUQ8
+Ghlbc94gLndFkuvHphgH
+=7jpt
 -----END PGP SIGNATURE-----
