@@ -1,6 +1,10 @@
 # ChangeLog for dev-tcltk/tclperl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclperl/ChangeLog,v 1.14 2015/03/25 14:10:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclperl/ChangeLog,v 1.15 2015/03/25 15:56:31 jlec Exp $
+
+  25 Mar 2015; Justin Lecher <jlec@gentoo.org> -tclperl-3.2.ebuild,
+  metadata.xml:
+  Drop old
 
   25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tclperl-3.2-r1.ebuild:
   Stable for x86, wrt bug #543882
